Initial Firestore vertical slice

--- a/spring-pocs/spring-cloud-firestore/src/main/resources/application.properties
+++ b/spring-pocs/spring-cloud-firestore/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+app.deploy.environment=local
+google.cloud.projectId=<enteryourgcpprojectidhere>
+google.cloud.credentials=<enteryourgcpcredentialsjsonkeyfilepathhere>
+firebase.firestore.collection.users=<enteryourcollectionnamehere>
+firebase.firestore.collection.players=<enteryourcollectionnamehere>
