--- a/spring-pocs/spring-cloud-firestore/build.gradle
+++ b/spring-pocs/spring-cloud-firestore/build.gradle
@@ -13,7 +13,12 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+	compile ('com.google.firebase:firebase-admin:6.12.2')
+
+	compile ('org.projectlombok:lombok')
+	annotationProcessor ('org.projectlombok:lombok')
+
+	implementation ('org.springframework.boot:spring-boot-starter-web')
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
